Update Request route
